<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <Button
        android:id="@+id/button"
        style="@style/PortfolioApp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/firstApp"
        android:onClick="spotifyMethod"/>
    <Button
        android:id="@+id/button2"
        style="@style/PortfolioApp"
        android:layout_below="@+id/button"
        android:text="@string/secondApp"
        android:onClick="scoresMethod"/>
    <Button
        android:id="@+id/button3"
        style="@style/PortfolioApp"
        android:layout_below="@+id/button2"
        android:text="@string/thirdApp"
        android:onClick="libraryMethod"/>
    <Button
        android:id="@+id/button4"
        style="@style/PortfolioApp"
        android:layout_below="@+id/button3"
        android:text="@string/fourthApp"
        android:onClick="buildItMethod"/>
    <Button
        android:id="@+id/button5"
        style="@style/PortfolioApp"
        android:layout_below="@+id/button4"
        android:text="@string/fifthApp"
        android:onClick="readerMethod"/>
    <Button
        android:id="@+id/button6"
        style="@style/PortfolioApp"
        android:layout_below="@+id/button5"
        android:text="@string/sixthApp"
        android:onClick="capstoneMethod"/>
</RelativeLayout>
